refactor: Add clear completed tasks button

--- a/src/app/pages/main-page/main-page.component.html
+++ b/src/app/pages/main-page/main-page.component.html
@@ -35,6 +35,11 @@
           </mat-checkbox>
         </div>
       </div>
+      <div>
+        <button mat-button (click)="clearCompleted()">
+          Eliminar tareas completadas
+        </button>
+      </div>
     </mat-card-content>
   </mat-card>
 </div>
